--- a/api-server/public/style.css
+++ b/api-server/public/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('colors.css');
+body {
+    font-family: 'Roboto', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
+}
+
 #map {
     height: 30rem;
     width: 100%;
@@ -5,9 +11,75 @@
 
 .content {
     display: flex;
+    height: 100%;
 }
 
 h1 {
-    color: #313391;
-    text-shadow: 0 3px 6px var(--rgba-white-start), 0 3px 6px var(--rgba-white-stop);
+    color: var(--blue1);
+    text-align: center;
+}
+
+h2 {
+    font-size: 125%;
+    padding-top: 10px;
+    padding-left: 10px;
+    color: var(--blue);
+}
+
+main {
+    color: var(--font);
+    width: auto;
+    height: auto;
+    background: lightgray;
+    box-shadow: 0 1px 3px var(--rgba-box-start), 0 1px 2px var(--rgba-box-stop);
+    border-radius: 10px;
+}
+
+th {
+    font-weight: bold;
+    font-style: italic;
+}
+
+footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 35px;
+    text-align: center;
+    font-size: 75%;
+    margin-top: 10px;
+    color: var(--copy);
+}
+
+
+/**
+ * Table CSS part 
+ */
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table td,
+table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+table tr:hover {
+    background-color: #ddd;
+}
+
+table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #454545;
+    color: white;
 }
